--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,32 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
-      run: npx playwright test
+    - name: Run Test In Safari for Mobile and Tab View
+      run: npm run safariMobileAndTabView
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
+    - name: Run Test In Safari for Mobile and Tab View
+      run: npm run safariMobileAndTabView
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
+    - name: Run Test In Chrome for Mobile and Tab View
+      run: npm run chromeMobileAndTabView
+    - uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: playwright-report
+        path: playwright-report/
+        retention-days: 30
+    - name: Run Test In All Browser For Desktop
+      run: npm run desktopViewInAllBrowser
     - uses: actions/upload-artifact@v3
       if: always()
       with:
