--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,39 +17,9 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Test In Safari for Mobile and Tab View
-      run: npm run safariMobileAndTabView
-<<<<<<< HEAD
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
-    - name: Run Test In Safari for Mobile and Tab View
-      run: npm run safariMobileAndTabView
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
-    - name: Run Test In Chrome for Mobile and Tab View
-      run: npm run chromeMobileAndTabView
-    - uses: actions/upload-artifact@v3
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 30
-=======
-    - name: Run Test In Safari for Mobile and Tab View
-      run: npm run safariMobileAndTabView
-    - name: Run Test In Chrome for Mobile and Tab View
-      run: npm run chromeMobileAndTabView
->>>>>>> 6528e43981b7404380a670bf808a9c15c0074dfc
-    - name: Run Test In All Browser For Desktop
-      run: npm run desktopViewInAllBrowser
+    - name: Run the Test Script
+      run: npx playwright test
+      
     - uses: actions/upload-artifact@v3
       if: always()
       with:
