--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -25,10 +25,12 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+     - name: Create snapshots directory
+      run: mkdir -p tests/__snapshots__   
     - name: Run the Test Script
       id: test
       run: npm run ${{ matrix.testScript }}
-      
+    
     - uses: actions/upload-artifact@v3
       if: always()
       with:
